--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="rad_preferences">Preferences</string>
     <string name="rad_file">File</string>
     <string name="rad_database">Database</string>
+    <string name="rad_key_preferences">PrefContent</string>
+    <string name="pref_summary">The data in preference</string>
+    <string name="pref_title">Preferences data</string>
 </resources>
